...
            "value" : "Guarda, inicia y ajusta tus ambientes favoritos."
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sauvegardez, lancez et façonnez vos ambiances préférées."
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Salva, avvia e modella le tue atmosfere preferite."
...
            "value" : "Mis ambientes"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mes ambiances"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Le mie atmosfere"
...
